--- a/index.html
+++ b/index.html
@@ -1,84 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B2Brain Dashboard</title>
-    <!--CSS Style Sheet-->
-    <link rel="stylesheet" href="./style.css" />
-    <!--Font Awesome CDN Link-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
-  </head>
-  <body>
-    <main class="content">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>B2Brain Dashboard</title>
+  <!--CSS Style Sheet-->
+  <link rel="stylesheet" href="./style.css" />
+  <!--Font Awesome CDN Link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+</head>
+
+<body>
+  <main class="content">
     <!--Dashboard-->
-    <nav>
-      <aside class="dashboard_container">
+    <section class="side_container">
+      <div class="container">
         <div class="branding">
           <img src="./Assests/B2Brain.png" alt="logo" class="logo" />
           <h1 class="logo_branding">B2Brain</h1>
         </div>
         <div class="container_links">
-          <ul>
+          <ul id="links">
             <li><i class="fa-solid fa-house"></i>
-            <a href="#"class="active">Dashboard</a>
+              <a href="#" class="active">Dashboard</a>
             </li>
             <li><i class="fa-regular fa-star"></i>
-            <a href="#">Intels</a>
+              <a href="#">Intels</a>
             </li>
             <li><i class="fa-regular fa-user"></i>
-            <a href="#">Leads</a>
+              <a href="#">Leads</a>
             </li>
             <li><i class="fa-regular fa-building"></i>
-            <a href="#">Accounts</a>
-            <i class="fa-solid fa-chevron-down dropdown_arrow" id="account_arrow"></i>
-            <ul class="dropdown">
-              <li><a href="#">Manage all</a></li>
-              <li><a href="#">Track new accounts</a></li>
-              <li><a href="#">Bulk Import</a></li>
-            </ul>
-          </li>
-          <li><i class="fa-solid fa-gear"></i>
-            <a href="#">Preferences</a>
-            <i class="fa-solid fa-chevron-down dropdown_arrow" id="preferences_arrow"></i>
-            <ul class="dropdown">
-              <li><a href="#">Product Focus</a></li>
-              <li><a href="#">Intel Preferences</a></li>
-              <li><a href="#">Lead Person</a></li>
-            </ul>
-          </li>
-          <li><i class="fa-solid fa-link"></i></i>
-            <a href="#">Integrations</a>
-          </li>
-          <li><i class="fa-solid fa-users"></i></i>
+              <a href="#" class="account_collapase">Accounts
+              <i class="fa-solid fa-chevron-down account_arrow"></i></a>
+              <ul class="dropdown account_wrapper">
+                <li><a href="#">Manage all</a></li>
+                <li><a href="#">Track new accounts</a></li>
+                <li><a href="#">Bulk Import</a></li>
+              </ul>
+            </li>
+            <li><i class="fa-solid fa-gear"></i>
+              <a href="#" class="preference_collapase">Preferences
+              <i class="fa-solid fa-chevron-down preference_arrow"></i></a>
+              <ul class="dropdown preference_wrapper">
+                <li><a href="#">Product Focus</a></li>
+                <li><a href="#">Intel Preferences</a></li>
+                <li><a href="#">Lead Person</a></li>
+              </ul>
+            </li>
+            <li><i class="fa-solid fa-link"></i></i>
+              <a href="#">Integrations</a>
+            </li>
+            <li><i class="fa-solid fa-users"></i></i>
               <a href="#">Team</a>
-          </li>
-          <li><i class="fa-solid fa-messages"></i></i>
+            </li>
+            <li><i class="fa-solid fa-messages"></i></i>
               <a href="#">Help/Support</a>
-          </li>
+            </li>
           </ul>
         </div>
-      </aside>
-    </nav>
-    <!--SearchBar-->
-    <section>
-    <div class="searchbar_content">
-      <div class="searchbar_left">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Search by account name or website">
       </div>
-      <div class="searchbar_right">
-        <i class="fa-regular fa-bell"></i>
-        <img src="./Assests/Logo.png" alt="userImg">
+    </section>
+    <section class="wrapper">
+      <!--SearchBar-->
+      <div class="searchbar">
+      <div class="searchBar_content">
+        <div class="searchbar_left">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input type="text" placeholder="Search by account name or website">
+        </div>
+        <div class="searchBar_right">
+          <i class="fa-regular fa-bell"></i>
+          <img src="./Assests/Logo.png" alt="userImg" class="userImg">
+        </div>
       </div>
     </div>
-  </section>
+      <!-- hero content -->
+      <div class="hero_img">
+        <img src="./Assests/hero-image.png" alt="heroimg" class="img1">
+        <img src="./Assests/hero-image2.png" alt="heroimg2" class="img2">
+        <img src="./Assests/hero-image3.png" alt="heroimg3" class="img3">
+      </div>
+    </section>
   </main>
-    <!--=============Script File============-->
-    <script src="./script.js"></script>
-  </body>
+  <!--=============Script File============-->
+  <script src="./script.js"></script>
+</body>
+
 </html>
