--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>B2Brain Dashboard</title>
   <!--CSS Style Sheet-->
   <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" type="image/x-icon" href="./Assests/B2Brain.png">
   <!--Font Awesome CDN Link-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 </head>
@@ -23,7 +24,7 @@
         </div>
         <div class="container_links">
           <ul id="links">
-            <li><i class="fa-solid fa-house"></i>
+            <li><img src="./Assests/home.png" alt="home"></i>
               <a href="#" class="active">Dashboard</a>
             </li>
             <li><i class="fa-regular fa-star"></i>
@@ -56,7 +57,7 @@
             <li><i class="fa-solid fa-users"></i></i>
               <a href="#">Team</a>
             </li>
-            <li><i class="fa-solid fa-messages"></i></i>
+            <li><img src="./Assests/comments-alt.png" alt="help"></i>
               <a href="#">Help/Support</a>
             </li>
           </ul>
@@ -68,8 +69,8 @@
       <div class="searchbar">
       <div class="searchBar_content">
         <div class="searchbar_left">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <input type="text" placeholder="Search by account name or website">
+          <i class="fa-solid fa-magnifying-glass searchIcon"></i>
+          <input type="search" placeholder="Search by account name or website" id="search">
         </div>
         <div class="searchBar_right">
           <i class="fa-regular fa-bell"></i>
@@ -82,6 +83,21 @@
         <img src="./Assests/hero-image.png" alt="heroimg" class="img1">
         <img src="./Assests/hero-image2.png" alt="heroimg2" class="img2">
         <img src="./Assests/hero-image3.png" alt="heroimg3" class="img3">
+      </div>
+      <div class="user_wrapper">
+        <div class="user_container">
+         <h1>Similar accounts</h1>
+         <div class="user_section">
+        </div>
+        </div>
+        <div class="userOption">
+          <h1>Quick Actions</h1>
+          <ul>
+            <li>Track new account</li>
+            <li>Bulk track accounts</li>
+            <li>Manage accounts</li>
+          </ul>
+        </div>
       </div>
     </section>
   </main>
