--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
         <div class="container_links">
           <ul id="links">
             <li><img src="./Assests/home.png" alt="home"></i>
-              <a href="#" class="active">Dashboard</a>
+              <a href="#" class="active dashboard">Dashboard</a>
             </li>
-            <li><i class="fa-regular fa-star"></i>
+            <li class="intels_badges"><i class="fa-regular fa-star"></i>
               <a href="#">Intels</a>
+              <p>4 unread</p>
             </li>
-            <li><i class="fa-regular fa-user"></i>
+            <li class="leads_badges"><i class="fa-regular fa-user"></i>
               <a href="#">Leads</a>
+              <p>4 unseen</p>
             </li>
             <li><i class="fa-regular fa-building"></i>
               <a href="#" class="account_collapase">Accounts
@@ -58,7 +60,7 @@
               <a href="#">Team</a>
             </li>
             <li><img src="./Assests/comments-alt.png" alt="help"></i>
-              <a href="#">Help/Support</a>
+              <a href="#" class="help">Help/Support</a>
             </li>
           </ul>
         </div>
